--- a/murata-snoc.ioc
+++ b/murata-snoc.ioc
@@ -28,34 +28,35 @@ Mcu.Pin11=PB1
 Mcu.Pin12=PH0-OSC_IN
 Mcu.Pin13=PH1-OSC_OUT
 Mcu.Pin14=PB15
-Mcu.Pin15=PA1
-Mcu.Pin16=PC2
-Mcu.Pin17=PB14
-Mcu.Pin18=PB13
-Mcu.Pin19=PA7
+Mcu.Pin15=PB2
+Mcu.Pin16=PA1
+Mcu.Pin17=PC2
+Mcu.Pin18=PB14
+Mcu.Pin19=PB13
 Mcu.Pin2=PA12
-Mcu.Pin20=PA2
-Mcu.Pin21=PB12
-Mcu.Pin22=PB0
-Mcu.Pin23=PA6
-Mcu.Pin24=PA3
-Mcu.Pin25=VP_ADC_TempSens_Input
-Mcu.Pin26=VP_ADC_Vref_Input
-Mcu.Pin27=VP_IWDG_VS_IWDG
-Mcu.Pin28=VP_RTC_VS_RTC_Activate
-Mcu.Pin29=VP_RTC_VS_RTC_Calendar
+Mcu.Pin20=PA7
+Mcu.Pin21=PA2
+Mcu.Pin22=PB12
+Mcu.Pin23=PB0
+Mcu.Pin24=PA6
+Mcu.Pin25=PA3
+Mcu.Pin26=VP_ADC_TempSens_Input
+Mcu.Pin27=VP_ADC_Vref_Input
+Mcu.Pin28=VP_IWDG_VS_IWDG
+Mcu.Pin29=VP_RTC_VS_RTC_Activate
 Mcu.Pin3=PA14
-Mcu.Pin30=VP_RTC_VS_RTC_WakeUp_intern
-Mcu.Pin31=VP_RTC_VS_RTC_Alarm_A_Intern
-Mcu.Pin32=VP_SYS_VS_Systick
-Mcu.Pin33=VP_TIM21_VS_ClockSourceINT
+Mcu.Pin30=VP_RTC_VS_RTC_Calendar
+Mcu.Pin31=VP_RTC_VS_RTC_WakeUp_intern
+Mcu.Pin32=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin33=VP_SYS_VS_Systick
+Mcu.Pin34=VP_TIM21_VS_ClockSourceINT
 Mcu.Pin4=PB4
 Mcu.Pin5=PC13
 Mcu.Pin6=PA13
 Mcu.Pin7=PC1
 Mcu.Pin8=PC0
 Mcu.Pin9=PC14-OSC32_IN
-Mcu.PinsNb=34
+Mcu.PinsNb=35
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L072CZYx
@@ -76,11 +77,8 @@ PA1.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA1.Locked=true
 PA1.PinState=GPIO_PIN_RESET
 PA1.Signal=GPIO_Output
-PA12.GPIOParameters=GPIO_Speed,GPIO_Label
-PA12.GPIO_Label=RADIO_TCXO_VCC
-PA12.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA12.Locked=true
-PA12.Signal=GPIO_Output
+PA12.Signal=GPIO_Analog
 PA13.Mode=Asynchronous
 PA13.Signal=LPUART1_RX
 PA14.Mode=Asynchronous
@@ -130,6 +128,10 @@ PB14.Signal=SPI2_MISO
 PB15.Locked=true
 PB15.Mode=Full_Duplex_Master
 PB15.Signal=SPI2_MOSI
+PB2.GPIOParameters=GPIO_Label
+PB2.GPIO_Label=RADIO_TCXO_VCC
+PB2.Locked=true
+PB2.Signal=GPIO_Output
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=RADIO_SCLK
 PB3.Locked=true
